@@ -6,10 +6,10 @@ Schema validators check to ensure that SAMLObjects adhere to the SAML 2.0 metada
 the objects adhere to the additional constraints placed upon the object by the SAML 2.0 metadata specification.
 <p />
 Information on using this library can be found in the 
-<a href="https://spaces.internet2.edu/display/SHIB/OSTwoUserManual">User's Manual</a> and information 
+<a href="https://wiki.shibboleth.net/confluence/display/SHIB/OSTwoUserManual">User's Manual</a> and information 
 on extending its functionality can be found in the 
-<a href="https://spaces.internet2.edu/display/SHIB/OSTwoDeveloperManual">Developer's Manual</a>.
+<a href="https://wiki.shibboleth.net/confluence/display/SHIB/OSTwoDeveloperManual">Developer's Manual</a>.
 
-@see <a href="https://spaces.internet2.edu/display/SHIB/OpenSAML">OpenSAML Wiki</a>
+@see <a href="https://wiki.shibboleth.net/confluence/display/SHIB/OpenSAML">OpenSAML Wiki</a>
 </BODY>
 </HTML>
