@@ -3,10 +3,10 @@
 Classes related to verifying various credentials within a SAML system.
 <p />
 Information on using this library can be found in the 
-<a href="https://spaces.internet2.edu/display/SHIB/OSTwoUserManual">User's Manual</a> and information 
+<a href="https://wiki.shibboleth.net/confluence/display/SHIB/OSTwoUserManual">User's Manual</a> and information 
 on extending its functionality can be found in the 
-<a href="https://spaces.internet2.edu/display/SHIB/OSTwoDeveloperManual">Developer's Manual</a>.
+<a href="https://wiki.shibboleth.net/confluence/display/SHIB/OSTwoDeveloperManual">Developer's Manual</a>.
 
-@see <a href="https://spaces.internet2.edu/display/SHIB/OpenSAML">OpenSAML Wiki</a>
+@see <a href="https://wiki.shibboleth.net/confluence/display/SHIB/OpenSAML">OpenSAML Wiki</a>
 </BODY>
 </HTML>
